<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.cs646.skyrev.personalinformation.PersonalInformationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="4dp"
            android:labelFor="@+id/first_name_input"
            android:text="@string/first_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/first_name_label"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:maxLength="20"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_name_input"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:labelFor="@+id/last_name_input"
            android:text="@string/last_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/last_name_label"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:maxLength="20"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_name_input"
            android:layout_marginTop="15dp"
            android:layout_marginStart="4dp"
            android:labelFor="@+id/email_input"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/email_label"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:maxLength="40"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_input"
            android:layout_marginTop="15dp"
            android:layout_marginStart="4dp"
            android:labelFor="@+id/age_input"
            android:text="@string/age"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/age_label"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:maxLength="2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_input"
            android:layout_marginTop="15dp"
            android:layout_marginStart="4dp"
            android:labelFor="@id/phone_input"
            android:text="@string/phone"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_below="@+id/phone_label"
            android:inputType="phone"
            android:hint="@string/hint_phone"
            android:textColor="@android:color/black"
            android:maxLength="10"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/major_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_input"
            android:layout_marginTop="15dp"
            android:layout_marginStart="4dp"
            android:labelFor="@+id/major_input"
            android:text="@string/major"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/major_input"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:layout_below="@+id/major_label"
            android:clickable="true"
            android:focusable="true"
            android:onClick="selectMajor"
            android:text="@string/select_a_major"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:maxWidth="180dp"/>

        <Button
            android:id="@+id/clear_selected_major"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_below="@+id/major_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/major_input"
            android:background="@drawable/ic_clear"
            android:onClick="clearSelectedMajor" />

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="100dp"
            android:layout_below="@+id/major_input">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:onClick="clearSharedPreferences"
                android:text="@string/clear"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/button_round_red"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:onClick="saveInformation"
                android:text="@string/done"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/button_round_green"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/buttons_container"
            android:layout_marginBottom="5dp"
            android:text="@string/footer"
            android:textSize="10sp"
            android:textAlignment="center" />

    </RelativeLayout>

</ScrollView>
